tests/outref/TSC08.ref
OCTO> CREATE TABLE ORDER1(
OCTO>  order1_id INTEGER PRIMARY KEY,
OCTO>  status INTEGER,
OCTO>  current_action INTEGER
OCTO> );
OCTO> 
OCTO> CREATE TABLE ORDERORDERACTIONS(
OCTO>  order1_id INTEGER PRIMARY KEY,
OCTO>  order_order_actions_id INTEGER KEY NUM 1,
OCTO>  action CHARACTER(12)
OCTO> );
OCTO> 
OCTO> CREATE TABLE ORDERSTATUS(
OCTO>  order_status_id INTEGER PRIMARY KEY
OCTO> );
OCTO> 
OCTO> SELECT order1
OCTO> FROM   order1 A
OCTO>        inner join orderorderactions B
OCTO>                ON A.current_action = B.order_order_actions_id
OCTO>        inner join orderstatus C
OCTO>                ON A.status = C.order_status_id
OCTO> WHERE  B.action = "NW";
[ERROR] PATH:LINENUM DATE TIME : Unknown column: ORDER1
Error with syntax near (line 1, column 7):

SELECT order1
       ^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT order1
FROM   order1 A
       inner join orderorderactions B
               ON A.current_action = B.order_order_actions_id
       inner join orderstatus C
               ON A.status = C.order_status_id
WHERE  B.action = "NW";

OCTO> 
